[package]
name = "fake_user_agent"
version = "0.1.1"
edition = "2021"
authors = ["Vraj Shah"]
description = "A fake user agent generator for Rust"
license = "MIT"
repository = "https://github.com/Vrajs16/fake_user_agent"
readme = "README.md"
keywords = ["fake", "user", "agent", "generator", "rust"]
categories = ["development-tools", "internet-protocols", "network-programming"]
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.9.0"
