[package]
name = "fake_user_agent"
version = "0.2.1"
edition = "2021"
authors = ["Vraj Shah"]
description = "A simple library for getting random user agents for rust."
license = "MIT"
repository = "https://github.com/Vrajs16/fake_user_agent"
readme = "README.md"
keywords = [
    "fake_ua",
    "user_agent",
    "user_agent_generator",
    "random_user_agent",
    "rand_ua",
]
categories = ["development-tools", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.3.0"
